Improve page dot visibility and fix upload button display

--- a/src/blocks/image-slider/style.scss
+++ b/src/blocks/image-slider/style.scss
@@ -1,10 +1,14 @@
 /*Block styles*/
-/*
 
 .ub_image_slider .flickity-viewport .components-form-file-upload {
+	height: 100%;
+}
+
+.ub_image_slider_add_images {
 	top: 50%;
 	transform: translateY(-50%);
-}*/
+	margin: auto;
+}
 
 /*! Flickity v2.2.0
 https://flickity.metafizzy.co
@@ -32,19 +36,14 @@ https://flickity.metafizzy.co
 /* draggable */
 
 .flickity-enabled.is-draggable {
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
 	user-select: none;
 }
 
 .flickity-enabled.is-draggable {
 	.flickity-viewport {
 		cursor: move;
-		cursor: -webkit-grab;
 		cursor: grab;
 		&.is-pointer-down {
-			cursor: -webkit-grabbing;
 			cursor: grabbing;
 		}
 	}
@@ -129,16 +128,13 @@ https://flickity.metafizzy.co
 	text-align: center;
 	line-height: 1;
 	.dot {
-		display: inline-block;
-		width: 10px;
-		height: 10px;
-		margin: 0 8px;
+		width: 12px;
+		height: 12px;
+		opacity: 1;
 		background: #333;
-		border-radius: 50%;
-		opacity: 0.25;
-		cursor: pointer;
 		&.is-selected {
-			opacity: 1;
+			background: white;
+			border: 2px solid #333;
 		}
 	}
 }
